--- a/src/Common/PSFlickr.Autofac/PSFlickr.Autofac.csproj
+++ b/src/Common/PSFlickr.Autofac/PSFlickr.Autofac.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E422EF0-382F-4436-8291-6C73A45E3F44}</ProjectGuid>
+    <ProjectGuid>{C5792137-8180-4C0B-8281-AC1A8B84E93E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.Application</RootNamespace>
-    <AssemblyName>PSFlickr.Application</AssemblyName>
+    <RootNamespace>PSFlickr.Autofac</RootNamespace>
+    <AssemblyName>PSFlickr.Autofac</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FlickrNet, Version=3.25.0.0, Culture=neutral, PublicKeyToken=2491df59efa5d132, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\FlickrNet.3.25.0\lib\net20\FlickrNet.dll</HintPath>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,8 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlickrAutentication.cs" />
-    <Compile Include="FlickrManager.cs" />
+    <Compile Include="AutofacContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
