--- a/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
+++ b/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{1AFA6604-C4B3-4E64-AECC-9CEF67A415B5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.PowershellModule</RootNamespace>
-    <AssemblyName>PSFlickr.PowershellModule</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>ProductivityTools.PSFlickr.PowershellModule</RootNamespace>
+    <AssemblyName>ProductivityTools.PSFlickr.PowershellModule</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,13 +30,14 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Description, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Description.1.0.0\lib\Description.dll</HintPath>
     </Reference>
     <Reference Include="ProductivityTools.PSCmdlet, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ProductivityTools.PSCmdlet.0.0.6\lib\v4.6.1\ProductivityTools.PSCmdlet.dll</HintPath>
+      <HintPath>..\..\..\packages\ProductivityTools.PSCmdlet.0.0.6\lib\v4.6.1\ProductivityTools.PSCmdlet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Authenticate.cs" />
+    <Compile Include="Commands\GetAlbums.cs" />
+    <Compile Include="Commands\SetFlickrToken.cs" />
     <Compile Include="PSFlickr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
