--- a/src/Common/ProductivityTools.PSFlickr.Autofac/ProductivityTools.PSFlickr.Autofac.csproj
+++ b/src/Common/ProductivityTools.PSFlickr.Autofac/ProductivityTools.PSFlickr.Autofac.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A242000-E8B8-467A-82B1-005B6C77C4CA}</ProjectGuid>
+    <ProjectGuid>{C5792137-8180-4C0B-8281-AC1A8B84E93E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.Configuration</RootNamespace>
-    <AssemblyName>PSFlickr.Configuration</AssemblyName>
+    <RootNamespace>ProductivityTools.PSFlickr.Autofac</RootNamespace>
+    <AssemblyName>ProductivityTools.PSFlickr.Autofac</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="IConfig.cs" />
+    <Compile Include="AutofacContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
