--- a/src/Common/ProductivityTools.PSFlickr.Configuration/ProductivityTools.PSFlickr.Configuration.csproj
+++ b/src/Common/ProductivityTools.PSFlickr.Configuration/ProductivityTools.PSFlickr.Configuration.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C930132F-80E0-4D07-B66A-77DD2975AC64}</ProjectGuid>
+    <ProjectGuid>{6A242000-E8B8-467A-82B1-005B6C77C4CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.DatabaseScripts</RootNamespace>
-    <AssemblyName>PSFlickr.DatabaseScripts</AssemblyName>
+    <RootNamespace>ProductivityTools.PSFlickr.Configuration</RootNamespace>
+    <AssemblyName>ProductivityTools.PSFlickr.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,18 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="ConnectionStringLightPT, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\ConnectionStringLightPT.0.0.2\lib\v4.6.1\ConnectionStringLightPT.dll</HintPath>
-    </Reference>
-    <Reference Include="DbUp, Version=3.3.5.0, Culture=neutral, PublicKeyToken=4b419c53bdfd4cbf, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\dbup.3.3.5\lib\net35\DbUp.dll</HintPath>
-    </Reference>
-    <Reference Include="DBUpPT, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\DBUpPT.0.0.1\lib\v4.6.1\DBUpPT.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,27 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseUpdate.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="IConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Scripts\001.CreateUserTable.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\PSFlickr.Configuration\PSFlickr.Configuration.csproj">
-      <Project>{6a242000-e8b8-467a-82b1-005b6c77c4ca}</Project>
-      <Name>PSFlickr.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\PSFlickr.Autofac\PSFlickr.Autofac.csproj">
-      <Project>{c5792137-8180-4c0b-8281-ac1a8b84e93e}</Project>
-      <Name>PSFlickr.Autofac</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Scripts\000.CreateSchema.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
