--- a/src/Server/ProductivityTools.PSFlickr.Database/ProductivityTools.PSFlickr.Database.csproj
+++ b/src/Server/ProductivityTools.PSFlickr.Database/ProductivityTools.PSFlickr.Database.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E422EF0-382F-4436-8291-6C73A45E3F44}</ProjectGuid>
+    <ProjectGuid>{8E48ECF8-4202-4C0A-A6FC-E3A02F3E9B5D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.Application</RootNamespace>
-    <AssemblyName>PSFlickr.Application</AssemblyName>
+    <RootNamespace>ProductivityTools.PSFlickr.Database</RootNamespace>
+    <AssemblyName>ProductivityTools.PSFlickr.Database</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FlickrNet, Version=3.25.0.0, Culture=neutral, PublicKeyToken=2491df59efa5d132, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\FlickrNet.3.25.0\lib\net20\FlickrNet.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,12 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlickrAutentication.cs" />
-    <Compile Include="FlickrManager.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
