--- a/src/Tests/ProductivityTools.PSFlickr.DatabaseScripts.Tests/ProductivityTools.PSFlickr.DatabaseScripts.Tests.csproj
+++ b/src/Tests/ProductivityTools.PSFlickr.DatabaseScripts.Tests/ProductivityTools.PSFlickr.DatabaseScripts.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6E769D49-E1DF-4554-B0B0-D36A95210A8D}</ProjectGuid>
+    <ProjectGuid>{80D93026-313C-45BD-B1B6-7E829C7641ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PSFlickr.Application.Tests</RootNamespace>
-    <AssemblyName>PSFlickr.Application.Tests</AssemblyName>
+    <RootNamespace>PSFlickr.DatabaseScripts.Tests</RootNamespace>
+    <AssemblyName>PSFlickr.DatabaseScripts.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,6 +38,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -48,13 +52,25 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlicrkAutenticationTests.cs" />
+    <Compile Include="DatabaseScriptsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Server\PSFlickr.Application\PSFlickr.Application.csproj">
-      <Project>{4e422ef0-382f-4436-8291-6c73a45e3f44}</Project>
-      <Name>PSFlickr.Application</Name>
+    <ProjectReference Include="..\..\Common\ProductivityTools.PSFlickr.Configuration\ProductivityTools.PSFlickr.Configuration.csproj">
+      <Project>{6a242000-e8b8-467a-82b1-005b6c77c4ca}</Project>
+      <Name>ProductivityTools.PSFlickr.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\ProductivityTools.PSFlickr.Autofac\ProductivityTools.PSFlickr.Autofac.csproj">
+      <Project>{c5792137-8180-4c0b-8281-ac1a8b84e93e}</Project>
+      <Name>ProductivityTools.PSFlickr.Autofac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Server\ProductivityTools.PSFlickr.DatabaseScripts\ProductivityTools.PSFlickr.DatabaseScripts.csproj">
+      <Project>{c930132f-80e0-4d07-b66a-77dd2975ac64}</Project>
+      <Name>ProductivityTools.PSFlickr.DatabaseScripts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProductivityTools.PSFlickr.Tests.Configuration\ProductivityTools.PSFlickr.Tests.Configuration.csproj">
+      <Project>{1c596dd3-5306-4a08-81bd-1eb55f50f6aa}</Project>
+      <Name>ProductivityTools.PSFlickr.Tests.Configuration</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
