update directory with photos

--- a/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
+++ b/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
@@ -54,8 +54,8 @@
     <Compile Include="Cmdlets\AddPhoto\Commands\AddPhotoToAlbum.cs" />
     <Compile Include="Cmdlets\AddPhoto\Commands\AddSinglePhoto.cs" />
     <Compile Include="Cmdlets\FlickrCmdletsBase.cs" />
-    <Compile Include="Cmdlets\NewAlbumFromDirectory\Commands\CreateAlbumAndPushPhotos.cs" />
-    <Compile Include="Cmdlets\NewAlbumFromDirectory\NewFlickrAlbumFromDirectory.cs" />
+    <Compile Include="Cmdlets\UpdateAlbumFromDirectory\Commands\CreateAlbumAndPushPhotos.cs" />
+    <Compile Include="Cmdlets\UpdateAlbumFromDirectory\UpdateFlickrAlbumFromDirectory.cs" />
     <Compile Include="FlickrOperationsFactory.cs" />
     <Compile Include="SingleCmdlets\AuthenticateFlickr.cs" />
     <Compile Include="Commands\Authenticate.cs" />
