--- a/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
+++ b/src/Client/ProductivityTools.PSFlickr.PowershellModule/ProductivityTools.PSFlickr.PowershellModule.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Cmdlets\FlickrCmdletsBase.cs" />
     <Compile Include="Cmdlets\UpdateAlbumFromDirectory\Commands\CreateAlbumAndPushPhotos.cs" />
     <Compile Include="Cmdlets\UpdateAlbumFromDirectory\UpdateFlickrAlbumFromDirectory.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="FlickrOperationsFactory.cs" />
     <Compile Include="SingleCmdlets\AuthenticateFlickr.cs" />
     <Compile Include="Commands\Authenticate.cs" />
@@ -63,9 +64,10 @@
     <Compile Include="Commands\SetFlickrToken.cs" />
     <Compile Include="PSFlickr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SingleCmdlets\ClearFlickr.cs" />
     <Compile Include="SingleCmdlets\MoveFlickrSinglePhotosToAlbum.cs" />
     <Compile Include="SingleCmdlets\DeleteFlickrAlbum.cs" />
-    <Compile Include="SingleCmdlets\FlickrSingleCmdlet.cs" />
+    <Compile Include="SingleCmdlets\FlickrSingleCmdletBase.cs" />
     <Compile Include="SingleCmdlets\NewFlickrAlbum.cs" />
     <Compile Include="SingleCmdlets\GetFlickrAlbums.cs" />
   </ItemGroup>
