--- a/src/ProductivityTools.PSFlickr.Configuration/ProductivityTools.PSFlickr.Configuration.csproj
+++ b/src/ProductivityTools.PSFlickr.Configuration/ProductivityTools.PSFlickr.Configuration.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ProductivityTools.MasterConfiguration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ProductivityTools.MasterConfiguration.1.0.0\lib\v4.6.1\ProductivityTools.MasterConfiguration.dll</HintPath>
+      <HintPath>..\..\packages\ProductivityTools.MasterConfiguration.1.0.1\lib\v4.6.1\ProductivityTools.MasterConfiguration.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,10 +48,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ConfigurationLocal.xml">
+    <Content Include="ConfigurationLocal.xml" />
+    <Content Include="Configuration.xml">
+      <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Configuration.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
