--- a/src/ProductivityTools.PSFlickr.Cmdlet/ProductivityTools.PSFlickr.csproj
+++ b/src/ProductivityTools.PSFlickr.Cmdlet/ProductivityTools.PSFlickr.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1AFA6604-C4B3-4E64-AECC-9CEF67A415B5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProductivityTools.PSFlickr.Cmdlet</RootNamespace>
-    <AssemblyName>ProductivityTools.PSFlickr.Cmdlet</AssemblyName>
+    <RootNamespace>ProductivityTools.PSFlickr</RootNamespace>
+    <AssemblyName>ProductivityTools.PSFlickr</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -77,6 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ProductivityTools.PSFlickr.psd1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
